# grt

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  flake.nix  issues.md  justfile  manifest.toon  release.toml  rust-toolchain.toml  tech-stack.md
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/grt/: SKILL.md
.config/: nextest.toml
ai/: context.md  context.toon  fix-plan.md  patterns.md  rust-conventions.md  session.md  session.toon
crates/grt/: Cargo.toml
crates/grt/src/: app.rs  comments.rs  config.rs  export.rs  gerrit.rs  git.rs  hook.rs  lib.rs  list.rs  main.rs  push.rs  rebase.rs  review.rs  review_query.rs  subprocess.rs
crates/grt/tests/: gerrit_test.rs
crates/grt/tests/fixtures/: gerrit_account.json  gerrit_change_detail.json  gerrit_comments.json  gerrit_version.txt
docs/design/: README.md  architecture.md  build-and-release.md  cli-design.md  config-system.md  data-model.md  error-handling.md  gerrit-client.md  git-operations.md  search-engine.md  sync-engine.md  tui-design.md
docs/design/adopted/: repo-layout.md  rust-conventions.md  tech-stack.md
docs/design/decisions/: 0001-git-review-port-complete.md  README.md
docs/design/draft/: architecture.md  build-and-release.md  cli-design.md  config-system.md  data-model.md  error-handling.md  gerrit-client.md  git-operations.md  search-engine.md  (+4 more)
docs/user/: README.md  cli-reference.md  configuration.md  getting-started.md  installation.md  workflows.md
skills/grt/: SKILL.md
(+12 files in other folders)
