[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.metadata.crane]
name = "grt"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smooney/grt"
description = "CLI/TUI tool for Git and Gerrit workflows"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gix = { version = "0.79", default-features = false, features = ["blocking-network-client"] }
toml = "0.8"
dirs = "6"
thiserror = "2"
url = "2"
urlencoding = "2"

# dev dependencies
mockito = "1"
tempfile = "3"
tokio-test = "0.4"
