[package]
name = "grt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gix.workspace = true
toml.workspace = true
dirs.workspace = true
thiserror.workspace = true
url.workspace = true
urlencoding.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
